<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarfClicker</string>
    <string name="hello_world">Hello world!</string>
    <string name="devname">Developed by Ethan Busbee</string>
    <string name="advert">Tap to reset game (debug)</string>
    <string name="marfle_bark">Marfle Bark</string>
    <string name="puppies">Puppies:</string>
    <string name="huskies">Huskies:</string>
    <string name="roboskis">RoboDoges:</string>
    <string name="banked_marfs">Banked Marfs:</string>
    <string name="total_marfs">All-Time Total Marfs:</string>
    <string name="time">Time Since Reset:</string>
    <string name="shop">Open Shop</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="buy">Buy</string>
    <string name="description">Description</string>
    <string name="boost">Boost</string>
    <string name="price">Price</string>
    <string name="marfs_byPaw">Marfs from Touches:</string>
    <string name="marfs_byIncome">Marfs from Income:</string>

    <!-- SharedPreferences Strings -->
    <string name="store">MarfNumbersStore</string>
    <string name="alltime">alltime</string>
    <string name="bank">bank</string>
    <string name="income">income</string>
    <string name="over9k">>9000</string>
    <string name="puppiesPrice">puppiesPrice</string>
    <string name="huskiesPrice">huskiesPrice</string>
    <string name="roboskisPrice">roboskisPrice</string>
    <string name="byPaw">byPaw</string>
    <string name="byIncome">byIncome</string>

</resources>