<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whitepaw.marfclicker.MainActivity"
    tools:ignore="MergeRootFrame, HardcodedText" >

    <!-- Everything that isn't the shop -->

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF000000"
        android:orientation="vertical"
        android:weightSum="10" >

        <!-- Main -->

        <RelativeLayout
            android:id="@+id/mainview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" >

            <TextView
                android:id="@+id/bank"
                style="@style/text.large"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/bank" >
            </TextView>

            <ImageView
                android:id="@+id/husky"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/marfle_bark"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher" >
            </ImageView>

            <TextView
                android:id="@+id/income"
                style="@style/text.large"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/income" >
            </TextView>

            <Button
                android:id="@+id/shop"
                style="@style/text"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/shop" >
            </Button>
        </RelativeLayout>

        <!-- Stats -->

        <LinearLayout
            android:id="@+id/statsparent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10" >

            <!-- Stats Labels -->

            <LinearLayout
                android:id="@+id/stats_labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:baselineAligned="false"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/stats_labels_total"
                    style="@style/text.label"
                    android:text="@string/total_marfs" >
                </TextView>

                <TextView
                    android:id="@+id/stats_labels_banked"
                    style="@style/text.label"
                    android:text="@string/banked_marfs" >
                </TextView>
            </LinearLayout>

            <!-- Stats Data -->

            <LinearLayout
                android:id="@+id/stats_values"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/stats_values_total"
                    style="@style/text.data"
                    android:text="@string/over9k" >
                </TextView>

                <TextView
                    android:id="@+id/stats_values_banked"
                    style="@style/text.data"
                    android:text="@string/over9k" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/advert"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:text="@string/advert" >
        </TextView>
    </LinearLayout>
    <!-- The Shop -->

    <ListView
        android:id="@+id/shop_content"
        style="@style/text"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >
    </ListView>
</android.support.v4.widget.DrawerLayout>